--- a/responsive_index.css
+++ b/responsive_index.css
@@ -241,14 +241,12 @@ p {
         line-height: 19px;
         color: #ababab;
     }
-    .bussiness-description .focus-description{
-        font-weight: 600;
-        color: #2C2C2C;
-    }
-    .bussiness-description a{
-        font-weight: 400;
-        text-decoration: none;
+    .bussiness-description .focus-description a{
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 14px;
         color: #FFA800;
+        text-decoration: none;
     }
 }
 @media screen and (min-width: 701px) {
@@ -556,20 +554,11 @@ p {
         align-items: flex-start;
         padding: 0px;
         gap: 10px;
-    }
-    .contact-bussiness{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0px;
-        gap: 10px; 
-    }
-    .contact-bussiness a{
+    }    
+    .focus-description a{
         color: #FFA800;
-        font-weight: 600;
-    }
-    .focus-description {
-        color: #2C2C2C;
         font-weight: 500;
+        font-size: 14px;
+        line-height: 19px;
     }
 }
