--- a/responsive_bussiness.css
+++ b/responsive_bussiness.css
@@ -87,7 +87,7 @@
         display: flex;
         flex-direction: column;
         gap: 24px;
-        width: 200px;        
+        width: max-content;        
     }
     .price-bussiness p{
         font-weight: 500;
@@ -329,7 +329,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 12px;
-        width: 280px;        
+        width: max-content;        
     }
     .price-bussiness p{
         font-weight: 500;
